[tool.poetry]
name = "rediskit"
version = "0.1.0"
description = "An async Redis client toolkit"
authors = ["bordab <bordax@proton.me>"]
readme = "README.md"
packages = [{include = "rediskit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
hiredis = "3.0.0"
msgpack = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.20.0"
black = "^23.0.0"
isort = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
